Fix order of state restoration of indexed and general UBO bindings

Bug: 722060
Change-Id: I198882569e7d3e58627578957bd0a275fc7ed7e2